@@ -1764,6 +1764,15 @@ will be lost.</td>
 <tr><td>Redo</td>
 <td>Re-does the last action.</td>
 </tr>
+<tr><td>Cut</td>
+<td>Cut the current selection to the clipboard.</td>
+</tr>
+<tr><td>Copy</td>
+<td>Copy the current selection to the clipboard.</td>
+</tr>
+<tr><td>Paste</td>
+<td>Paste the clipboard text into the current document.</td>
+</tr>
 <tr><td>Select all</td>
 <td>Makes a selection of all text in the current
 document.</td>
