@@ -1,3 +1,9 @@
+2008-02-04  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * doc/geany.txt, doc/geany.html:
+   List Cut, Copy, Paste keybinding descriptions.
+
+
 2008-02-04  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * doc/geany.html, doc/geany.txt, images/*: Update images for 0.13.
